fixed the spacing between cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -17,14 +17,16 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  height: 500px;
-  width: 250px;
+  height: 300px;
+  width: 215px;
+  padding: 14px;
 }
 
 .cards-main {
   align-items: center;
   display: flex;
   flex-flow: row wrap;
+  gap: 20px;
   justify-content: space-evenly;
   padding: 32px;
 }
